--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-	<script type="text/javascript" src="js/llb.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
+	<link rel="stylesheet" href="css/style.css">
 </head>
-<body style='background-color: #26C6DA'>
+<body>
 	<div id="test_window_state"></div>
 	<div id="test_location"></div>
+	
+	<!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>-->
+	<script type="text/javascript" src="js/llb.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 
 	<script type="text/javascript">
 
